[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "fsdemo"
version = "0.0.1"
description = "MLOps Republic - Feautre Store Demo"
authors = [
    {name = "Miquel Ferrer", email = "miqui.ferrer@gmail.com"},
]
dependencies = [
    "feast==0.35.0",
    "flytekit==1.10.3",
    "loguru==0.7.2",
    "mlflow==2.9.2",
    "typer==0.9.0",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
fsdemo = "fsdemo.cli:app"

[tool.pdm]
[tool.pdm.build]
includes = ["src/fsdemo"]

[tool.pdm.dev-dependencies]
dev = [
    "black==22.8.0",
    "bump2version==1.0.1",
    "coverage==6.4.4",
    "flake8==5.0.4",
    "flake8-bugbear==22.9.11",
    "isort==5.12.0",
    "mypy==0.971",
    "pre-commit==2.20.0",
    "pytest==7.1.3",
    "pytest-cov==3.0.0",
    "pytest-mock==3.8.2",
    "tox==4.5.2",
    "tox-pdm>=0.6.1",
    "twine==1.14.0",
    "wheel==0.33.6",
    "flake8-isort>=6.0.0",
    "types-requests>=2.31.0.6",
]

[tool.isort]
profile = "black"

[tool.ruff.lint.isort]
known-first-party = ["fsdemo"]
